--- a/index.html
+++ b/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>WEB1 - Welcome</title>
-  <meta charset="utf-8">
+    <meta chrset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>나의 홈페이지</title>
 </head>
-
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">Java Script</a></li>
-  </ol>
-
-  <ul>
-    <li>egoing</li>
-    <li>k8805</li>
-    <li>sorialgi</li>
-  </ul>
-
-
-  <h2>WEB</h2>
-  <p>
-    웹은 정보의 공간이고 사람들이 가장 많이 접하는 것이다.
-  </p>
+    <nav style="background-color: darkgreen; font-size: 150%; text-align: center;">
+        <a href="./index.html" style="color:gold">Home</a>
+        <a href="./blog_list.html" style="color:gold">Blog</a>
+        <a href="./About_me.html" style="color:gold">About Me</a>
+    </nav>
+    <h1>첫 번째 크기 헤드라인</h1>
+    <h2>첫 번째 크기 헤드라인</h2>
+    <h3>첫 번째 크기 헤드라인</h3>
+    <h4>첫 번째 크기 헤드라인</h4>
+    <h5>첫 번째 크기 헤드라인</h5>
+    <p>문단은 p로 쓰세오. p는 아마도 Pragraph의 앞글자를 따온 것이겠죠?</p>
+    <a href="https://www.google.com">Go to google</a>
+    <hr/>
+    <img src="./stay_funky.webp" width="600px">
 </body>
-
 </html>
