--- a/blog_list.html
+++ b/blog_list.html
@@ -4,12 +4,13 @@
     <meta chrset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Blog</title>
+    <link href="./practice.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav style="background-color: darkgreen; font-size: 150%; text-align: center;">
-        <a href="./index.html" style="color:gold">Home</a>
-        <a href="./blog_list.html" style="color:gold">Blog</a>
-        <a href="./About_me.html" style="color:gold">About Me</a>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./blog_list.html">Blog</a>
+        <a href="./About_me.html">About Me</a>
     </nav>
     <h1>Blog</h1>
 
