--- a/About_me.html
+++ b/About_me.html
@@ -4,19 +4,71 @@
     <meta chrset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About_me</title>
+    <link href="./bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <nav style="background-color: darkgreen; font-size: 150%; text-align: center;">
-        <a href="./index.html" style="color:gold">Home</a>
-        <a href="./blog_list.html" style="color:gold">Blog</a>
-        <a href="./About_me.html" style="color:gold">About Me</a>
-    </nav>
-    <h1>About Me</h1>
-    <h2>저는 호날두입니다.</h2>
 
-    <p>골 넣는 걸 좋아합니다.</p>
-    <a href="./index.html">첫 화면으로 가기</a>
-    <hr/>
-    <img src="./siu.jfif" width="600px">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">호날두의 비밀수업</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./blog_list.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./About_me.html">About Me</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container">
+        <div class="row">
+            <div class="col-5">
+                <h1>About Me</h1>
+                <h2>저는 호날두입니다.</h2>
+
+                <p>골 넣는 걸 좋아합니다.</p>
+                <hr/>
+                <a href="./index.html">첫 화면으로 가기</a>
+            </div>
+            <div class="col-3">
+                <img src="./siu.jfif" class="img-fluid w-100">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm bg-info">
+              One of three columns
+            </div>
+            <div class="col-sm bg-secondary">
+              One of three columns
+            </div>
+            <div class="col-sm">
+              One of three columns
+            </div>
+          </div>
+      </div>
+        
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
