--- a/index.html
+++ b/index.html
@@ -4,21 +4,67 @@
     <meta chrset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>나의 홈페이지</title>
+    <link href="./bootstrap4/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+    <script type="text/javascript" src="add_two_numbers.js"></script>
+    <script type="text/javascript" src="what_time_is_it.js"></script>
 </head>
 <body>
-    <nav style="background-color: darkgreen; font-size: 150%; text-align: center;">
-        <a href="./index.html" style="color:gold">Home</a>
-        <a href="./blog_list.html" style="color:gold">Blog</a>
-        <a href="./About_me.html" style="color:gold">About Me</a>
-    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="./index.html">호날두의 비밀수업</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./blog_list.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./About_me.html">About Me</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown link
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     <h1>첫 번째 크기 헤드라인</h1>
     <h2>첫 번째 크기 헤드라인</h2>
     <h3>첫 번째 크기 헤드라인</h3>
     <h4>첫 번째 크기 헤드라인</h4>
     <h5>첫 번째 크기 헤드라인</h5>
+
+    <button onclick="whatTimeIsIt()">현재시간</button>
+    <hr />
+
+    <label for="inputA">a</label>
+    <input id="inputA" value=1 onkeyup="doSomething()">
+    <label for="inputB">b</label>
+    <input id="inputB" value=2 onkeyup="doSomething()">
+
+    <p><span id="valueA">1</span> + <span id="valueB">2</span> = <span id="valueC">3</span>
+    </p>
+
     <p>문단은 p로 쓰세오. p는 아마도 Pragraph의 앞글자를 따온 것이겠죠?</p>
     <a href="https://www.google.com">Go to google</a>
     <hr/>
     <img src="./stay_funky.webp" width="600px">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
